--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,6 +34,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 r.EarlyZPass=3
 r.EarlyZPassOnlyMaterialMasking=True
 r.MinScreenRadiusForDepthPrepass=0.030000
+r.DefaultFeature.MotionBlur=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -83,5 +84,4 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType3,Name="Stone")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
 
